--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Default ignored files
 /shelf/
 /workspace.xml
 # Editor-based HTTP Client requests
@@ -6,4 +5,5 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-target/
+/target/
+/.idea/
