--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>com.farkasch.barista.GUI.MainApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
