--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <org.springframework.version>5.1.3.RELEASE</org.springframework.version>
+        <org.springframework.version>5.3.15</org.springframework.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>12.0.2</version>
+            <version>17.0.0.1</version>
         </dependency>
 
         <dependency>
