--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>jsr250-api</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.albfernandez</groupId>
+      <artifactId>juniversalchardet</artifactId>
+      <version>2.4.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
