--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,9 @@
       <version>1.0</version>
     </dependency>
     <dependency>
-      <groupId>com.github.albfernandez</groupId>
-      <artifactId>juniversalchardet</artifactId>
-      <version>2.4.0</version>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
     </dependency>
   </dependencies>
   <build>
